--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "scripts": {
     "test": "jest"
   },
-  "jest": {
-    "collectCoverage": true,
-    "coverageReporters": ["html"]
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
-    "jest": "^27.2.4",
+    "jest": "^27.3.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "ts-node": "^10.3.0"
   }
 }
