--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/mocha": "^9.0.0",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
@@ -20,6 +21,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "ts-node": "^10.3.0"
+    "ts-node": "^10.3.0",
+    "uuid": "^8.3.2"
   }
 }
