--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "rxjs": "^7.4.0",
     "ts-node": "^10.3.0",
     "uuid": "^8.3.2"
   }
